syntax = "proto3";
option cc_enable_arenas = true;

package YandexQuery.Internal;
option java_package = "com.yandex.query.internal";
option java_outer_classname = "YandexQueryInternalProtos";

import "ydb/library/yql/providers/dq/api/protos/service.proto";
import "ydb/library/yql/dq/proto/dq_tasks.proto";
import "ydb/public/api/protos/yq.proto";
import "ydb/core/yq/libs/protos/yq_private.proto";

message Consumer {
    string name = 1;
}

message QueryInternal {
    string token = 1;
    repeated NYql.NDqProto.TDqTask task = 2; // deprected and should not be used, will be removed in future
    repeated Yql.DqsProto.TAttr settings = 3;
    repeated Consumer consumer = 4;
    repeated YandexQuery.Connection connection = 5;
    repeated YandexQuery.Binding binding = 6;
    YandexQuery.QueryAction action = 7;
    string ast = 8; // deprected and should not be used, will be removed in future
    ExecuteMode execute_mode = 9;
    StateLoadMode state_load_mode = 10;
    string cloud_id = 11;
    repeated Yq.Private.TopicConsumer created_topic_consumers = 12;
    repeated bytes dq_graph = 13;
    int32 dq_graph_index = 14;
    StreamingDisposition disposition = 15;
    uint64 result_limit = 16;
}

message JobInternal {
}

message ConnectionInternal {
    string cloud_id = 2;
}

message BindingInternal {
    string cloud_id = 2;
}
